# mram_driver

./: .gitignore  CMakeLists.txt  README.md  build_project  clear_build
cmake/: packages.cmake  sources.cmake  testing_gtest.cmake
documentation/sources/: classes_diagram.pu  component_diagram.pu  sequence_diagram_add_record.pu  sequence_diagram_block_read.pu  sequence_diagram_erase_all.pu  sequence_diagram_set_block_protect.pu  sequence_diagram_write_status.pu
include/: bureau_codec.h  bureau_store.h  mram_mr25h40.h  spi.h
src/: bureau_codec.cpp  bureau_store.cpp  main.cpp  mram_mr25h40.cpp
test/mocks/: spi_mock.h  spi_mock_p.h
test/src/: bureau_codec_test.cpp  bureau_store_test.cpp  e2e_test.cpp  main_test.cpp  mram_test.cpp
